0.14/tutorials/getting-started-5.md
Note

Go to the end
to download the full example code.

# Get started with your own first training loop

**Author**: [Vincent Moens](https://github.com/vmoens)

Note

To run this tutorial in a notebook, add an installation cell
at the beginning containing:

> ```
> !pip install tensordict
> !pip install torchrl
> ```

Time to wrap up everything we've learned so far in this Getting Started
series!

In this tutorial, we will be writing the most basic training loop there is
using only components we have presented in the previous lessons.

We'll be using DQN with a CartPole environment as a prototypical example.

We will be voluntarily keeping the verbosity to its minimum, only linking
each section to the related tutorial.

## Building the environment

We'll be using a gym environment with a [`StepCounter`](../reference/generated/torchrl.envs.transforms.StepCounter.html#torchrl.envs.transforms.StepCounter)
transform. If you need a refresher, check our these features are presented in
[the environment tutorial](getting-started-0.html#gs-env-ted).

```
import torch

torch.manual_seed(0)

import time

from torchrl.envs import GymEnv, StepCounter, TransformedEnv

env = TransformedEnv(GymEnv("CartPole-v1"), StepCounter())
env.set_seed(0)

from tensordict.nn import TensorDictModule as Mod, TensorDictSequential as Seq
```

## Designing a policy

The next step is to build our policy.
We'll be making a regular, deterministic
version of the actor to be used within the
[loss module](getting-started-2.html#gs-optim) and during
[evaluation](getting-started-4.html#gs-logging).
Next, we will augment it with an exploration module
for [inference](getting-started-3.html#gs-storage).

```
from torchrl.modules import EGreedyModule, MLP, QValueModule

value_mlp = MLP(out_features=env.action_spec.shape[-1], num_cells=[64, 64])
value_net = Mod(value_mlp, in_keys=["observation"], out_keys=["action_value"])
policy = Seq(value_net, QValueModule(spec=env.action_spec))
exploration_module = EGreedyModule(
 env.action_spec, annealing_num_steps=100_000, eps_init=0.5
)
policy_explore = Seq(policy, exploration_module)
```

## Data Collector and replay buffer

Here comes the data part: we need a
[data collector](getting-started-3.html#gs-storage-collector) to easily get batches of data
and a [replay buffer](getting-started-3.html#gs-storage-rb) to store that data for training.
`auto_register_policy_transforms=True` asks the collector to attach any
environment transforms required by the policy, such as episode-start markers
and recurrent-state primers. The registration is spec-based and idempotent.

```
from torchrl.collectors import Collector
from torchrl.data import LazyTensorStorage, ReplayBuffer

init_rand_steps = 5000
frames_per_batch = 100
optim_steps = 10
collector = Collector(
 env,
 policy_explore,
 frames_per_batch=frames_per_batch,
 total_frames=-1,
 init_random_frames=init_rand_steps,
 auto_register_policy_transforms=True,
)
rb = ReplayBuffer(storage=LazyTensorStorage(100_000))

from torch.optim import Adam
```

## Loss module and optimizer

We build our loss as indicated in the [dedicated tutorial](getting-started-2.html#gs-optim), with
its optimizer and target parameter updater:

```
from torchrl.objectives import DQNLoss, SoftUpdate

loss = DQNLoss(value_network=policy, action_space=env.action_spec, delay_value=True)
optim = Adam(loss.parameters(), lr=0.02)
updater = SoftUpdate(loss, eps=0.99)
```

## Logger

We'll be using a CSV logger to log our results, and save rendered videos.

```
from torchrl._utils import logger as torchrl_logger
from torchrl.record import CSVLogger, VideoRecorder

path = "./training_loop"
logger = CSVLogger(exp_name="dqn", log_dir=path, video_format="mp4")
video_recorder = VideoRecorder(logger, tag="video")
record_env = TransformedEnv(
 GymEnv("CartPole-v1", from_pixels=True, pixels_only=False), video_recorder
)
```

## Training loop

Instead of fixing a specific number of iterations to run, we will keep on
training the network until it reaches a certain performance (arbitrarily
defined as 200 steps in the environment - with CartPole, success is defined
as having longer trajectories).

```
total_count = 0
total_episodes = 0
t0 = time.time()
for i, data in enumerate(collector):
 # Write data in replay buffer
 rb.extend(data)
 num_frames = data.numel()
 total_count += num_frames
 total_episodes += data["next", "done"].sum().item()
 # Update the exploration factor once per collected frame
 exploration_module.step(num_frames)
 max_length = rb[:]["next", "step_count"].max()
 if len(rb) > init_rand_steps:
 # Optim loop (we do several optim steps
 # per batch collected for efficiency)
 for _ in range(optim_steps):
 sample = rb.sample(128)
 loss_vals = loss(sample)
 loss_vals["loss"].backward()
 optim.step()
 optim.zero_grad()
 # Update target params
 updater.step()
 if i % 10 == 0:
 torchrl_logger.info(f"Max num steps: {max_length}, rb length {len(rb)}")
 if max_length > 200:
 break

t1 = time.time()

torchrl_logger.info(
 f"solved after {total_count} steps, {total_episodes} episodes and in {t1 - t0}s."
)
```

## Rendering

Finally, we run the environment for as many steps as we can and save the
video locally (notice that we are not exploring).

```
record_env.rollout(max_steps=1000, policy=policy)
video_recorder.dump()
```

This is what your rendered CartPole video will look like after a full
training loop:

![../_images/cartpole.gif](../_images/cartpole.gif)

This concludes our series of "Getting started with TorchRL" tutorials!
Feel free to share feedback about it on GitHub.

**Total running time of the script:** (0 minutes 6.262 seconds)

[`Download Jupyter notebook: getting-started-5.ipynb`](../_downloads/d04ba01cba3add54c2b1a3c96ae6320d/getting-started-5.ipynb)

[`Download Python source code: getting-started-5.py`](../_downloads/83fec940296abb7d78d6441fd5ad1993/getting-started-5.py)

[`Download zipped: getting-started-5.zip`](../_downloads/eca47ab9308c1987e81fb27ca2532496/getting-started-5.zip)

[Gallery generated by Sphinx-Gallery](https://sphinx-gallery.github.io)